--- a/demo.html
+++ b/demo.html
@@ -115,11 +115,11 @@
         rightButton.addEventListener('click', () => {
             if (clickCount < 5) {
                 // 更新按钮大小
-                leftButton.style.fontSize = `${16 + clickCount * 2}px`;
-                leftButton.style.padding = `10px ${20 + clickCount * 5}px`;
+                leftButton.style.fontSize = `${16 + clickCount * 8}px`; // 每次变大一半
+                leftButton.style.padding = `10px ${20 + clickCount * 10}px`;
 
-                rightButton.style.fontSize = `${16 - clickCount * 2}px`;
-                rightButton.style.padding = `10px ${20 - clickCount * 5}px`;
+                rightButton.style.fontSize = `${16 - clickCount * 5}px`; // 每次缩小三分之一
+                rightButton.style.padding = `10px ${20 - clickCount * 6}px`;
 
                 // 更新右侧按钮文字、图片和文本内容
                 const currentContent = contents[clickCount];
@@ -130,7 +130,6 @@
                 // 增加点击次数
                 clickCount++;
             }
-
             // 如果点击次数达到5次，隐藏右侧按钮
             if (clickCount === 5) {
                 rightButton.style.display = 'none';
