--- a/demo.html
+++ b/demo.html
@@ -38,7 +38,7 @@
 		 background-color: #FFB6C1
 		}
         #right-button{
-		 background-color: #0000FF
+		 background-color: #6495ED
 		}
 
         /* 内容区域样式 */
